<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DShare</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="create_post">发布帖子</string>
    <string name="profile">个人中心</string>
    <string name="wallet">钱包</string>
    <string name="logout">退出登录</string>
    <string name="login_title">DShare登录</string>
    <string name="wallet_address_hint">钱包地址</string>
    <string name="password_hint">密码</string>
    <string name="no_account_register">没有账号？去注册</string>
    <string name="register_title">注册新账号</string>
    <string name="nickname_hint">昵称</string>
    <string name="confirm_password_hint">确认密码</string>
    <string name="btn_register">注册</string>
    <string name="has_account_login">已有账号？去登录</string>
    <string name="create_post_title">发布新帖子</string>
    <string name="post_content_hint">分享你的想法...</string>
    <string name="select_image">选择图片</string>
    <string name="select_video">选择视频</string>
    <string name="btn_publish">发布</string>
    <string name="profile_title">个人中心</string>
    <string name="wallet_address_label">钱包地址</string>
    <string name="gold_balance">金币余额</string>
    <string name="posts_count">发帖数</string>
    <string name="wallet_title">我的钱包</string>
    <string name="total_gold">总金币</string>
    <string name="mining_power">算力</string>
    <string name="btn_start_mining">开始挖矿</string>
    <string name="btn_stop_mining">停止挖矿</string>
    <string name="btn_like">点赞</string>
    <string name="btn_comment">评论</string>
    <string name="comment_hint">添加评论...</string>
    <string name="btn_send">发送</string>
    <string name="post_detail_title">帖子详情</string>
    <string name="create_account">注册新账号</string>
    <string name="password_min_hint">密码（至少6个字符）</string>
    <string name="whats_on_your_mind">分享你的想法...</string>
    <string name="add_image">添加图片</string>
    <string name="add_video">添加视频</string>
    <string name="publish">发布</string>
    <string name="address_colon">地址：</string>
    <string name="dshare_gold">金币</string>
    <string name="mine_gold_pow">挖矿（工作量证明）</string>
    <string name="send_gold">发送金币</string>
    <string name="receiver_address_hint">接收方地址</string>
    <string name="amount_hint">金额</string>
    <string name="transaction_history">交易记录</string>
    <string name="my_profile">我的个人中心</string>
    <string name="nickname_colon">昵称：</string>
    <string name="bio_colon">简介：</string>
    <string name="posts_colon">帖子：</string>
    <string name="gold_colon">金币：</string>
    <string name="edit_profile">编辑资料</string>
    <string name="author">作者</string>
    <string name="posted">发布于</string>
    <string name="content">内容</string>
    <string name="likes_colon">点赞：</string>
    <string name="dislikes_colon">踩：</string>
    <string name="gold_reward_colon">金币奖励：</string>
    <string name="like">点赞</string>
    <string name="dislike">踩</string>
    <string name="comments">评论</string>
    <string name="write_comment_hint">写评论...</string>
    <string name="time">时间</string>
    <string name="comments_colon">评论：</string>
    <string name="comment">评论</string>
    
    <string name="enter_address_password">请输入地址和密码</string>
    <string name="user_not_found">用户不存在，请先注册</string>
    <string name="wrong_password">密码错误</string>
    <string name="login_success">登录成功！</string>
    <string name="login_failed">登录失败：</string>
    <string name="fill_all_fields">请填写所有字段</string>
    <string name="password_not_match">密码不匹配</string>
    <string name="password_min_length">密码至少需要6个字符</string>
    <string name="registration_success">注册成功！</string>
    <string name="your_address">您的地址：</string>
    <string name="registration_failed">注册失败：</string>
    <string name="video_selected">视频已选择</string>
    <string name="enter_content_or_media">请输入内容或选择媒体</string>
    <string name="please_login_first">请先登录</string>
    <string name="post_published_success">帖子发布成功！</string>
    <string name="publish_failed">发布失败：</string>
    <string name="address_prefix">地址：</string>
    <string name="dshare_gold_unit">DShare 金币</string>
    <string name="invalid_amount">无效金额</string>
    <string name="not_logged_in">未登录</string>
    <string name="invalid_amount_insufficient">无效金额或余额不足</string>
    <string name="transaction_sent">交易已发送！</string>
    <string name="send_failed">发送失败：</string>
    <string name="mining_started">挖矿开始...</string>
    <string name="mining_complete">挖矿完成！奖励：</string>
    <string name="gold_unit">金币</string>
    <string name="mining_failed">挖矿失败：</string>
    <string name="from_prefix">从：</string>
    <string name="to_prefix">到：</string>
    <string name="global_feed_title">DShare - 全球动态</string>
    <string name="loading_posts_error">加载帖子错误：</string>
    
    <string name="author_prefix">作者：</string>
    <string name="posted_prefix">发布于：</string>
    <string name="likes_prefix">点赞：</string>
    <string name="dislikes_prefix">踩：</string>
    <string name="gold_reward_prefix">金币奖励：</string>
    <string name="enter_comment">请输入评论</string>
    <string name="comment_added">评论已添加！</string>
    <string name="add_comment_failed">添加评论失败：</string>
    <string name="nickname_prefix">昵称：</string>
    <string name="bio_prefix">简介：</string>
    <string name="no_bio_yet">暂无简介</string>
    <string name="gold_prefix">金币：</string>
    <string name="posts_prefix">帖子：</string>
    
    <string name="media_limit_hint">提示：最多可添加 6 张图片或 2 个视频</string>
    <string name="image_limit_reached">已达到图片上限（最多 6 张）</string>
    <string name="video_limit_reached">已达到视频上限（最多 2 个）</string>
    <string name="remove">移除</string>
    
    <string name="copy_address">复制</string>
    <string name="address_copied">钱包地址已复制到剪贴板</string>
    <string name="edit_profile_title">编辑资料</string>
    <string name="nickname_hint_edit">请输入新昵称</string>
    <string name="bio_hint">请输入简介（可选）</string>
    <string name="save">保存</string>
    <string name="profile_saved">资料保存成功</string>
    <string name="no_posts_yet">暂无帖子，快来发布第一个吧！</string>
    <string name="posts_default">帖子：0</string>
    <string name="gold_balance_default">金币：0</string>
    <string name="wallet_balance_default">0 金币</string>
    <string name="likes_default">点赞：0</string>
    <string name="dislikes_default">踩：0</string>
    <string name="gold_reward_default">金币奖励：0</string>
    
    <string name="no_posts_yet_feed">暂无帖子，快来发布第一个吧！</string>
    <string name="likes_colon_feed">点赞：</string>
    <string name="dislikes_colon_feed">踩：</string>
    <string name="comments_colon_feed">评论：</string>
    <string name="gold_colon_feed">金币：</string>
</resources>